# Tender-RAG-Lab

./: .env.example  .gitignore  MIGRATION_GUIDE.md  MIGRATION_INDEX.md  MIGRATION_INGESTION.md  Makefile  README.md  README_chunking.md  README_tender_ingestion.md  README_tender_management.md  REFACTOR_INDEX_SUMMARY.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh
.github/workflows/: docs.yml
configs/: config.py  logger.py
db/: db_connection_test.py  export_and_test.sh  session.py
docs/: .gitignore  Makefile  NEO4J_INTEGRATION.md  NEO4J_SETUP.md  README.md  SPHINX_SETUP.md
docs/core/: README.md  chunking.md  indexing.md  rag.md
docs/domain/: README.md  services.md
docs/guides/: environment-setup.md
docs/infra/: README.md  adding-integrations.md  milvus.md
docs/migrations/: README.md  ingestion-summary.md
docs/source/: README_SPHINX.md  conf.py  index.rst  roadmap.md
docs/source/api/: core.rst  domain.rst  index.rst  infra.rst
docs/source/apps/: README.md
docs/source/architecture/: decisions.md  overview.md  where-to-put-code.md
docs/source/core/: chunking.md  embedding.md  indexing.md  ingestion.md  llm.md
docs/source/domain/: README.md  services.md  tender-search.md
docs/source/guides/: environment-setup.md  indexing-documents.md  integration-walkthrough.rst  knowledge-graph.md  neo4j-integration.md  neo4j-setup.md  quickstart.md  search-retrieval.md
docs/source/infra/: adding-integrations.md  database.md  (+3 more)
examples/: graph_integration_examples.py  index_usage.py  ingestion_usage.py
scripts/: clean_neo4j.py  setup_neo4j.py
src/: __init__.py
src/api/: deps.py  ingestion.py  providers.py
src/clients/: supabase.py
src/core/: README.md
src/domain/: __init__.py
src/infra/: __init__.py  factory.py
src/models/: __init__.py  documents.py  tenders.py
src/schemas/: __init__.py  chunking.py  documents.py  tenders.py
src/services/: __init__.py  documents.py  ingestion_service.py  lots.py  storage.py  tenders.py
static/: app.js  home.css  offcanvas.css  offcanvas.js  styles.css  tender_detail.js
static/milvus/: app.js  collection_detail.js  collections.js  create_collection.js  styles.css
templates/: demo.html  home.html  tender_detail.html
templates/milvus/: collection_detail.html  collections.html  databases.html  index.html
tests/: README.md  TEST_STATUS.md  conftest.py
tests/e2e/: test_workflows.py
tests/mocks/: __init__.py
(+257 files in other folders)
