[project]
name = "tender-rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "charset-normalizer>=3.4.4",
    "fastapi>=0.124.2",
    "fasttext>=0.9.3",
    "ftfy>=6.3.1",
    "lingua-language-detector>=1.4.2",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30.3",
    "pymilvus>=2.4.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.45",
    "greenlet>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.31.0",
    "supabase>=2.25.1",
    "jinja2>=3.1.6",
]

[tool.uv]
package = false
